[Ref]: 필모그래피 응답 DTO 및 서비스 로직 수정
- FilmographyResponse 클래스에 역할 결정 메서드 추가 및 필드 수정: 역할을 결정하는 로직을 개선하고, 영화 및 TV 시리즈에 따라 제목과 연도를 적절히 설정
- PersonQueryServiceImpl 클래스에서 필모그래피 조회 로직 개선: 중복 제거, 날짜 없는 작품 필터링, 최신순 정렬 로직 추가 및 안전한 리스트 합치기 구현
- 코드 가독성을 높이기 위한 주석 추가 및 불필요한 코드 정리